Changed links in footer Fixed header dropdown in homepage (z-index was too low) Changed "Start Shopping" button - removed bonus and made it clickable Added darker border to #services-wrapper and #interested when hovering over

--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ header {
   margin-bottom: 40px;
   position: relative;
   line-height: 1.6;
-  z-index: 100;
+  z-index: 101;
 }
 
 header .wrapper {
@@ -831,6 +831,7 @@ body {
   -moz-border-radius: 4px;
   -o-border-radius: 4px;
   border-radius: 4px;
+  margin-top: 13px;
   padding: 6px;
   font-family: Arial;
   font-weight: bold;
@@ -852,6 +853,11 @@ body {
 
 #homepage-wrapper .start-shopping-button:hover {
   background: #e0a100;
+}
+
+#homepage-wrapper .start-shopping-button a {
+  text-decoration: none;
+  color: #974806;
 }
 
 #homepage-wrapper .start-shopping-button .get-credits-free {
@@ -887,6 +893,10 @@ body {
   -moz-border-radius: 4px;
   -o-border-radius: 4px;
   border-radius: 4px;
+}
+
+#services-wrapper:hover {
+  border-color: #999;
 }
 
 #services-wrapper .services-column {
@@ -1078,6 +1088,7 @@ body {
 #homepage-wrapper #recent-posts {
   clear: both;
   padding-top: 20px;
+  font-family: Arial;
 }
 
 #homepage-wrapper #recent-posts #posts-wrapper {
@@ -1128,6 +1139,10 @@ body {
   font-size: 16px;
   line-height: 1;
   padding: 15px 20px 18px;
+}
+
+#homepage-wrapper #interested:hover {
+  border-color: #999;
 }
 
 #homepage-wrapper #interested .to-get-started {
